scheduler/src/kubernetes/runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runner
  namespace: fushigi
  labels:
    app: fushigi
    run: runner
    runner: PUT_RUNNER_ID_HERE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fushigi
      run: runner
      runner: PUT_RUNNER_ID_HERE
  template:
    metadata:
      labels:
        app: fushigi
        run: runner
        runner: PUT_RUNNER_ID_HERE
    spec:
      containers:
      - image: kurai/fushigi/runner
        name: runner
        imagePullPolicy: IfNotPresent
