scheduler/src/kubernetes/runner-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: runner
  namespace: fushigi
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        exact: "/runner/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: runner
        port:
          number: 3000
